Fix toolbar spacing

--- a/assignment2/bank-machine-app/src/app/app.component.scss
+++ b/assignment2/bank-machine-app/src/app/app.component.scss
@@ -15,10 +15,12 @@ $space: 36px;
   //min-height: 800px;
   //min-width: 1000px;
 
-  height: 800px;
-  width: 1000px;
+  height: 804px;
+  //height: 800px;
+  width: 1004px;
   margin: auto;
-
+  //padding: 16px;
+  margin-top: 26px;
   //background-color: ;
 }
 
